src/style.css
@font-face {
   font-family: "itcMachine";
   src:
      url("./assets/fonts/MachineStd.woff2") format("woff2"),
      url("./assets/fonts/MachineStd.woff") format("woff");
   font-weight: 600;
   font-style: normal;
}

body {
   background-color: aliceblue;
   overflow: hidden;
   font-size: 16px;
}

header {
   font-family: itcMachine, sans-serif;
   margin: 0;
   text-align: center;
   border: none;
}

header h1 {
   font-size: 4rem;
   letter-spacing: 6px;
}

#root {
   height: 89vh;
   border: none;
}

.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
   width: 100vw;
}

.game-board {
   display: flex;
   /* gap: 0.5px; */
   margin: calc(1rem + 1vw);
   border: 1px solid #464646;
}

.column {
   display: flex;
   flex-direction: column;
   /* gap: 0.5px; */
}

.cell {
   width: 30px;
   height: 30px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: #eaeaea;
   border: 0.5px solid #464646;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
}

.cell:hover {
   background-color: #e0e0e0;
}

.cell.miss {
   background-color: #61e18a;
}

.cell.hit {
   background-color: #f57373;
}

.cell.ship {
   background-color: #5f83f0;
}

.cell.highlight {
   background-color: #00ff004d;
   border: 1px solid #1f2c1f;
}

.cell.disabled {
   pointer-events: none;
}

.overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1000;
   text-align: center;
}

.announcement-card {
   background-color: white;
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   text-align: center;
   max-width: 90%;
   width: 400px;
}

.announcement-card h2 {
   font-size: 2rem;
   color: #333;
   margin: 0 0 1rem 0;
}

.overlay button {
   background-color: #007bff;
   color: white;
   border: none;
   padding: 0.5rem 1rem;
   border-radius: 5px;
   cursor: pointer;
   font-size: 1rem;
   transition: background-color 0.3s ease;
}

.overlay button:hover {
   background-color: #0056b3;
}

.game-board.disabled {
   pointer-events: none;
   opacity: 0.5;
}

.place-ships {
   padding: calc(1rem + 1vw);
   background-color: aliceblue;
   border-radius: 10px;
}

footer {
   margin: 0;
   text-align: center;
   font-size: 1.2rem;
}

@media (min-width: 768px) {
   header h1 {
      letter-spacing: 12px;
   }

   .container {
      flex-direction: row;
   }
}

